--- a/movie-quotes/style.css
+++ b/movie-quotes/style.css
@@ -25,13 +25,17 @@ h3{
     font-style: italic;
     margin-left: 2em;
 }
-li {
+span {
     font-size: 1.2em;
-    margin-left: 2em;
+    padding-left: 2em;
+    display: inline-block;
 }
 .peter {
     color: red;
 }
+/*.peter:hover {
+    font-size: 1.6em;
+}*/
 .ray {
     color: lime;
 }
@@ -49,6 +53,7 @@ li {
 }
 #poster {
     width: 40%;
+    position: sticky;
     float: right;
     margin-right: 2em;
     margin-top: 1em;
