--- a/lyrics-exercise/style.css
+++ b/lyrics-exercise/style.css
@@ -1,1 +1,62 @@
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+#header {
+    margin-top: 4em;
+    margin-left: 8em;
+    width: 60%;
+}
+#header p{
+    margin-left: 4em;
+}
+/*Font downloaded from free use creator at https://www.fontspace.com/flames-font-f25529*/
+@font-face {
+    font-family: flamesFont;
+    src: url('flames.ttf');
+}
+h1 {
+    font-family: flamesFont;
+    letter-spacing: 0.1em;
+    font-size: 6.4em;
+    color: darkcyan;
+}
+h2 {
+    font-family: flamesFont;
+    letter-spacing: 0.2em;
+    color: darkcyan;
+    font-size: 2.4em;
+    margin-top: -2em;
+    margin-left: 1em;
+}
+h3{
+    margin-left: 2em;
+}
+h4{
+    font-style: oblique;
+}
+#imageCanvas {
+    width: 1600px;
+    height: 1600px;
+    position: absolute;
+    background-image: url('cover.jpeg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    border: solid 1px red;
+    margin-top: -12em;
+    margin-left: -2em;
+    opacity: 0.10;
+    z-index: 1;
+}
+#lyricsBlock {
+    position: relative;
+    z-index: 2;
+    width: 30%;
+    margin-left: 12em;
+    opacity: 4;
+    float: left;
+}
+#spotify {
+    float: right;
+    margin-right: 12em;
+}
 
