--- a/lyrics-exercise/style.css
+++ b/lyrics-exercise/style.css
@@ -2,7 +2,6 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 #header {
-    margin-top: 4em;
     margin-left: 8em;
     width: 60%;
 }
@@ -29,19 +28,18 @@ h2 {
     margin-left: 1em;
 }
 h3{
-    margin-left: 2em;
+    margin-left: -2em;
 }
 h4{
     font-style: oblique;
 }
 #imageCanvas {
-    width: 1600px;
-    height: 1600px;
+    width: 2000px;
+    height: 2000px;
     position: absolute;
     background-image: url('cover.jpeg');
     background-size: 100%;
     background-repeat: no-repeat;
-    border: solid 1px red;
     margin-top: -12em;
     margin-left: -2em;
     opacity: 0.10;
@@ -50,13 +48,16 @@ h4{
 #lyricsBlock {
     position: relative;
     z-index: 2;
-    width: 30%;
-    margin-left: 12em;
+    width: 40%;
+    margin-left: 8em;
     opacity: 4;
     float: left;
 }
-#spotify {
-    float: right;
-    margin-right: 12em;
+#coverPhoto {
+    width: 40%;
 }
+iframe {
+}
+
+
 
