--- a/recipe/complete/css/style.css
+++ b/recipe/complete/css/style.css
@@ -101,7 +101,9 @@ h1 {
     #imgMobile {
         display: none;
     }
-
+    #description {
+        line-height: 25px;
+    }
     #imgDesktop {
         display: block;
         width: 35%;
